fixed padding on mobile

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -67,6 +67,10 @@
 /*MobileAnsicht*/
 @media screen and (max-width: 992px) {   
 
+    body {
+        padding-top: 0px;
+    }
+
     #container-blue {
         width: 100%;
     }
